# teshub

./: .gitignore  LICENSE.md  README.md  setup.cfg
.github/workflows/: compile_deploy_latex.yml
code/: dataset_scraper.py
code/dataset/: dataset_scraper.py  label_stream_dir.py
code/weather_classifier/: .gitignore  README.md  requirements.txt  tf_utils.py
cvat_settings/: project.json
deploy/: docker-compose.yaml  server.Dockerfile  website.Dockerfile
docs/: 10_04_2023_update.md  27_02_2023_update.md
notebooks/: fog_net.ipynb
paper/: references.bib  vae_weather_translation.tex
teshub/: extra_typing.py  typing.py
teshub/annotation/: webcam_annotation_job.py  webcam_annotation_manager.py
teshub/annotation/cvat/: cvat_converter.py  cvat_job.py  cvat_manager.py
teshub/cli/: __init__.py  auto_annotation_cli.py  cvat_cli.py  recognition_cli.py  scraper_cli.py  segmentation_cli.py  translation_cli.py
teshub/cvat/: cvat_task_creator.py  webcam_cvat_task_creator.py
teshub/dataset/: csv_converter.py  csv_manager.py  webcam_csv.py  webcam_dataset.py  webcam_frame_csv.py  windy_dataset.py
teshub/recognition/: predictor.py  trainer.py  utils.py  weather2info.py  weather_informer.py
teshub/scraping/: webcam_downloader.py  webcam_scraper.py  webcam_scraper_config.py
teshub/segmentation/: predictor.py  run_segformer.py  segmentation_cli.py  trainer.py  utils.py  weather2seg.py  weather_segformer.py
teshub/server/: config.py
teshub/server/app/: __init__.py  ml_models.py  routes.py
teshub/translation/: att_pix2pix.py  pix2pix.py  tensorboard_image_sampler.py  teshub.py  trainer.py  vae.py  weather2weather.py  weather_morph.py
teshub/translation/config/: abc_config.py  add_fog_config.py  add_snow_config.py  base_config.py  clear2cloudy_config.py  clear2snowy_config.py  remove_snow_config.py
teshub/visualization/: transforms.py
teshub/weather_classifier/: run_inference.py
teshub/webcam/: webcam_frame.py  webcam_record_keeper.py  webcam_stream.py
website/: package.json
website/src/: App.tsx  ImageUpload.css  ImageUpload.tsx  index.tsx
website/src/common/: LegendItem.css  LegendItem.tsx  RangeInput.css  RangeInput.tsx
website/src/upload/: UploadPage.css  UploadPage.tsx
