[metadata]
name = teshub
version = 0.1
author = Stefan Stefanache
description = Changing weather conditions in images
long_description = file: README.md

[options]
packages = find:

python_requires = >= 3.10

install_requires =
    numpy
    pandas
    pandera
    dacite
    pillow

[options.extras_require]
scraping = 
    requests
    bs4
    aiofiles
    aiohttp
    lxml

cvat =
    cvat_sdk

modeling =
    torch
    transformers
    torchvision
    tensorboard
    torchmetrics
    lightning

[options.entry_points]
console_scripts = 
    teshub_scraper = teshub.cli.scraper_cli:main
    teshub_cvat = teshub.cli.cvat_cli:main
    teshub_recognition = teshub.cli.recognition_cli:main
