[metadata]
name = teshub
version = 0.1
author = Stefan Stefanache
description = Changing weather conditions in images
long_description = file: README.md

[options]
packages = find:

python_requires = >= 3.10

install_requires =
    numpy
    pandas
    pandera
    dacite
    pillow


[options.extras_require]
cvat =
    cvat_sdk

models = 
    torch
    transformers
    torchvision
    lightning
    lightning-bolts @ git+https://github.com/PytorchLightning/lightning-bolts.git@master

training =
    tensorboard
    torchmetrics
    teshub[models]

server =
    flask
    python-dotenv
    teshub[models]

[options.entry_points]
console_scripts = 
    teshub_cvat = teshub.cli.cvat_cli:main
    teshub_recognition = teshub.cli.recognition_cli:main
    teshub_auto_annotation = teshub.cli.auto_annotation_cli:main
    teshub_translation = teshub.cli.translation_cli:main
